REGRESSION(r284711): [GStreamer] Buffering, seek broken on youtube.com https://bugs.webkit.org/show_bug.cgi?id=233861

Unreviewed, manual revert of 284711.

Patch by Philippe Normand <pnormand@igalia.com> on 2022-03-10

Source/WebCore:

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::currentTimeFudgeFactor):
* platform/graphics/SourceBufferPrivate.h:
(WebCore::SourceBufferPrivate::timeFudgeFactor const):
* platform/graphics/gstreamer/GStreamerCommon.h:
(WebCore::toGstClockTime):
* platform/graphics/gstreamer/MediaSampleGStreamer.cpp:
(WebCore::MediaSampleGStreamer::MediaSampleGStreamer):
* platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::AppendPipeline::appsinkNewSample):
(WebCore::bufferTimeToStreamTime): Deleted.

LayoutTests:

* platform/glib/imported/w3c/web-platform-tests/media-source/mediasource-remove-expected.txt:


Canonical link: https://commits.webkit.org/248273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291111 268f45cc-cd09-0410-ab3c-d52691b4dbfc